# podcast-benchmark

./: .gitignore  .gitmodules  404.html  CITATION.cff  Makefile  POPULATION_TRANSFORMER_INTEGRATION.md  README.md  README_shamus.md  all_sentences_podcast.csv  analysis_utils.py  analyze_variance.py  base_df.csv  config.py  config_utils.py  data_utils.py  data_utils_old.py  decoding.ipynb  decoding_utils.py  embeddings.py  fold_utils.py  generate_config_for_persubject_feature_concat.py  index.html  job_script_in_interactive_baseline.sh  job_script_in_interactive_baseline_supersubject.sh  job_script_in_interactive_persubject.sh  job_script_in_interactive_supersubject.sh  launch_hyperparam_search.py  loader.py  main.py  metrics.py  mkdocs.yml  playground.py  plot_results.ipynb  plot_utils.py  pyproject.toml  registry.py  requirements-test.txt  requirements.txt  ridge_utils.py  run_volume_level_ridge.py  (+14 more)
adding-task/: index.html
api-reference/: index.html
baseline-results/: index.html
commands/: README.md  job-cancel.sh  job-status.sh  run-local.sh  submit-task.sh
configs/: README.md  hyper_param_config.yml
configuration/: index.html
core/: __init__.py  config.py  registry.py
decoding_env/: pyvenv.cfg
docs/: adding-task.md  api-reference.md  baseline-results.md  configuration.md  foundation_model_integration_analysis.md  index.md  onboarding-model.md  quickstart.md  slurm_gpu_usage_policy.md  task-reference.md
example_foundation_model/: config.py  integration.py
fmri_pieman/: __init__.py  build_movie_npy.py  download_pieman_data.py  eval_temporal_vae.py  pieman_data.py  run_srm_and_vae.py  run_srm_tutorial.py  run_tutorial.py  train_temporal_vae.py
fmri_raiders/: README.md  __init__.py  cli_style.py  download_raider_data.py  eval_temporal_vae.py  raider_data.py  run_tutorial.py  srm_raider.py  torch_device.py  train_temporal_vae.py  tutorial_algorithms.py  vae_windows.py
foundation_model/: foundation_decoder.py  foundation_decoder_original.py  foundation_decoder_utils.py  models_mae.py  pos_embed.py  utils.py
foundation_model_integration_analysis/: index.html
language_generation/: gpt2_brain.py
metrics/: __init__.py  classification_metrics.py  embedding_metrics.py  regression_metrics.py  utils.py
models/: __init__.py  caching.py  shared_config_setters.py  shared_constructors.py  shared_preprocessors.py
neural_conv_decoder/: decoder_model.py  neural_conv_utils.py  simple_temporal_model.py  torch_ridge_model.py
notebooks/: 1_check_runs_compare_with_labserver.ipynb  2_generate_result_matrix.ipynb  2_generate_result_matrix_allcond.ipynb  3_visualize_result_matrix.ipynb  podcast_benchmark_from_labserver.csv
notes_tmp/: SETUP_NOTES.md  WHAT_LUCY_DID.md
onboarding-model/: index.html
plots/: embeddings.npy
population_transformer_module/: README.md  __init__.py  population_transformer_utils.py
processed_data/: all_subject_sig.csv  df_word_onset_with_pos_class.csv  iu_boundaries.csv  regions.txt  sig_elecs_glove.csv  sig_elecs_gpt2.csv
quickstart/: index.html
scripts/: format_make_groups.py  generate_baseline_plots.py  generate_baseline_report.py  generate_experimental_lazy_volume_variants.py  generate_paper_results.py  generate_single_subject_full_configs.py  generate_training_targets.py  migrate_fm_results.py  migrate_foundation_model_configs_to_caching.py  multimodal_score.py  plot_atlas_region_electrodes.py  run_ridge_analysis.py  run_ridge_batch_analysis.py  set_foundation_model_global_keys.py  transcribe_prosody.py
search/: search_index.json
shared_space/: __init__.py  vae_pipeline.py
slurm_gpu_usage_policy/: index.html
task-reference/: index.html
tasks/: __init__.py  content_noncontent.py  gpt_surprise.py  iu_boundaries.py  llm_decoding.py  placeholder_task.py  pos_task.py  sentence_onset.py  volume_level.py  whisper_embedding.py  word_embedding.py
tests/: __init__.py  conftest.py  test_config.py  test_data_utils.py  test_decoding_setup.py  test_decoding_utils.py  test_feature_cache_utils.py  test_gpt2_brain.py  test_llm_decoding.py  test_main.py  (+11 more)
(+764 files in other folders)
